--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
 <p class="ctstyle" align="center">
-<img width="80%" src="http://image.s4.exct.net/lib/fe8e1574746203787c/m/1/6bc4b8b8-19f2-41d3-8081-129b7b5a01c8.png" />
+<img width="80%" src="giphy.gif" />
 <br />
 
 Select an image to from Giphy CMS
