Fixing default content
Fixing default content

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Select an image to from Giphy CMS
 $(document).ready(function(){
 
 	var sdk = new window.sfdc.BlockSDK(); //initalize SDK
-  sdk.setContent('<img width="50px" src="giphy.gif" />'); //resets content block
+  sdk.setContent('<img width="50px" src="https://sfmc-giphy.herokuapp.com/giphy.gif" />'); //resets content block
 
 var offset = 0;
 
