--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@ Select an image to from Giphy CMS
     var selectedImageId, image;
     var offset = 0;
     var term = "";
+    var originals = {};
+
 $(document).ready(function(){
 
 /*
@@ -110,12 +112,14 @@ function fetchGifs(offset, searchterm, clear) {
   }
   $.ajax({url: apiurl, success: function(result){
     for (i = 0; i < result.data.length; i++) { 
-    if (result.data[i].images.preview_gif['url']) {
+    if (result.data[i].images.preview_gif['url'] && result.data[i].images.original['url'] ) {
         $("#list-tab").append("<a class=\"list-group-item list-group-item-action ctstyle itemlist\" id=\"list-home-list\" data-toggle=\"list\" href=\"#list-home\" role=\"tab\" aria-controls=\"home\" onclick=\"javascript:chosen('image" + result.data[i].id + "')\"><image width=\"20%\" id=\"image" + result.data[i].id + "\" src=\""+result.data[i].images.preview_gif['url']+"\" /> <span style=\"padding-left: 20px\">"+result.data[i].title+"</span></a>")
+        originals["image"+result.data[i].id] = result.data[i].images.original['url'];
       }
     }
   }});
 
+  
 }
 
 function clearGifs() {
@@ -133,7 +137,8 @@ function chosen(imgId) {
   selectedImageId = imgId;
 
   if(imgId != ""){
-    image = document.getElementById(imgId).src;
+    //image = document.getElementById(imgId).src;
+    image = originals[imgId];
   }
 
   if(fit){
